<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tugas Akhir PAM</string>
    <string name="action_settings">Settings</string>
	<string name="login_username">Username or ID</string>
	<string name="login_password">Password</string>
	<string name="login_button_login">Log In</string>
	<string name="login_button_register">Register</string>
	<string name="login_button_exit">Exit Button</string>
	<string name="splash_logo">Splash Logo</string>
	<string name="regis_nama">Nama</string>
	<string name="regis_email">E-Mail</string>
	<string name="regis_alamat">Alamat</string>
	<string name="regis_telp">No. Telp</string>
	<string name="button_back">Back</string>
</resources>
